fixed mobile overflow issues

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,4 +3,6 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
 }
