--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -60,7 +60,7 @@ h2 {
   position: fixed;
   width: 2em;
   height: 2em;
-  right: 2em;
+  left: 87vw;
   top: 1.3em;
   visibility: hidden;
 }
@@ -89,7 +89,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
 */
 .bm-menu-wrap {
   position: fixed;
-  height: 100%;
 }
 
 .bm-menu {
