--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -21,11 +21,12 @@ h3 {
 
 .background {
   background-color: rgba(60, 79, 104, 0.674);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
+  overflow: hidden;
   top: 0;
-  left: 0%;
+  left: 0;
   z-index: 1;
 }
 
